--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -87,6 +87,7 @@ jobs:
           plugin_notable_types: commit
           plugin_pagespeed: yes
           plugin_pagespeed_url: .user.website
+          plugin_pagespeed_token: ${{ secrets.PAGESPEED_TOKEN }}
           plugin_people: yes
           plugin_people_limit: 24
           plugin_people_size: 28
